[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/3 Objects/tempBG.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Fish.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Pixellari.ttf.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/PlatforMinigame.gd" type="Script" id=5]
[ext_resource path="res://assets/3 Objects/death.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Victory.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -178, 59, 0, 0, 0, 0, 1140, 56 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 721.5, 4.5 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 11.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9, 17.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 7.5, 31.5 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[node name="PlatforMinigame" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 697.5, 90 )
rotation = 0.00596368
scale = Vector2( 4.00276, 1 )
texture = ExtResource( 1 )

[node name="Victory" parent="." instance=ExtResource( 7 )]
position = Vector2( 676, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 75, 76 )

[node name="PlayerPosition" type="Position2D" parent="Player"]
position = Vector2( 30, 10 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 83, 14 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1418
limit_bottom = 180

[node name="LabelVS" type="Label" parent="."]
margin_left = 140.0
margin_top = 85.0
margin_right = 180.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 1 )
text = "VS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fish" parent="." instance=ExtResource( 3 )]
position = Vector2( 238, 90 )

[node name="Path2D" type="Path2D" parent="Fish"]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Fish/Path2D"]
position = Vector2( -178, 59 )
rotation = -0.00227742

[node name="Position2D" type="Position2D" parent="Fish"]
position = Vector2( 30, 150 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
position = Vector2( 696.5, 89 )
scale = Vector2( 3.97514, 0.0530726 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 694.5, 88.5 )
shape = SubResource( 2 )

[node name="VsTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="LabelInfo" type="Label" parent="."]
visible = false
margin_left = 13.0
margin_top = 12.0
margin_right = 79.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 3 )
text = "Press Enter to drop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 697, 176 )
scale = Vector2( 3.97514, 0.0530726 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 695, 176 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D3"]
position = Vector2( 338, 81 )
scale = Vector2( 0.0366028, 0.0530726 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 338, 82 )
shape = SubResource( 5 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D4"]
position = Vector2( 392.313, 72.5 )
scale = Vector2( 0.0459257, 0.128492 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 392, 72.5 )
shape = SubResource( 6 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D5"]
position = Vector2( 475, 64.75 )
scale = Vector2( 0.0459257, 0.209497 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( 475, 64.5 )
shape = SubResource( 7 )

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="StaticBody2D6"]
position = Vector2( 570, 49.375 )
scale = Vector2( 0.0459257, 0.372905 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( 570.5, 49.5 )
shape = SubResource( 8 )

[node name="LabelV" type="Label" parent="."]
visible = false
margin_left = 739.0
margin_top = 34.0
margin_right = 818.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 9 )
text = "Fish Caught!
+1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="swim" from="." to="Fish" method="_on_PlatforMinigame_swim"]
[connection signal="victory" from="Victory" to="." method="_on_Victory_victory"]
[connection signal="timeout" from="VsTimer" to="." method="_on_VsTimer_timeout"]
[connection signal="timeout" from="VictoryTimer" to="." method="_on_VictoryTimer_timeout"]
